# Carapace

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
src/: cli.rs  error.rs  lib.rs  main.rs
src/api/: handlers.rs  mod.rs
src/css/: mod.rs
src/fetcher/: mod.rs  ssrf.rs
src/html/: inliner.rs  mod.rs  sanitizer.rs
src/js/: analysis.rs  deobfuscate.rs  mod.rs  runtime.rs  vdom.rs
src/layout/: mod.rs
src/renderer/: backend.rs  mod.rs  proxy.rs
src/tech/: mod.rs
src/threat/: mod.rs
